observability/k8s/app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sample-go-trace-api-1
  name: app1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sample-go-trace-api-1
status:
  loadBalancer: {}
