observability/k8s/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  - port: 9990
    protocol: TCP
    targetPort: 9990
    name: management
  selector:
    app: keycloak
