observability/k8s/prometheus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy: {}
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - image: prom/prometheus:latest
        name: prometheus
        resources: {}
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-config
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
